<resources>
    <string name="app_name">Blind2</string>
    <string name="action_settings">Settings</string>
    <string name="connect_to_stick">Connect to stick</string>
    <string name="registration_form">Registration form</string>
    <string name="register_here">Register Here...</string>
    <string name="registration">Registration</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="contacts_operation">Contacts Operation</string>
    <string name="enter_phone_num_to_search">Enter phone num to search...</string>
    <string name="search">Search</string>
    <string name="welcome">Welcome</string>
    <string name="enter_mobile_number">Enter mobile number..</string>
    <string name="delete">Delete</string>
    <string name="title_activity_call_testing">CallTesting</string>
    <string name="dial_no" />
    <string name="call" />
    <string name="call_operation">call operation</string>
    <string name="enter_name_or_number" />
</resources>
