<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.blind2.MainActivity">
    <item
        android:id="@+id/call"
        android:orderInCategory="100"
        android:title="@string/call_operation"
        app:showAsAction="never" />

    <item
        android:id="@+id/contact_operation"
        android:orderInCategory="100"
        android:title="@string/contacts_operation"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_connect_stick"
        android:orderInCategory="100"
        android:title="@string/connect_to_stick"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_start_form"
        android:orderInCategory="100"
        android:title="@string/registration_form"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
